tooling/nargo_cli/tests/snapshots/execution_success/workspace/execute__tests__force_brillig_false_inliner_0.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: artifact
---
{
  "noir_version": "",
  "hash": "4482196688514663717",
  "abi": {
    "parameters": [
      {
        "name": "x",
        "type": {
          "kind": "field"
        },
        "visibility": "private"
      },
      {
        "name": "y",
        "type": {
          "kind": "field"
        },
        "visibility": "public"
      }
    ],
    "return_type": null,
    "error_types": {}
  },
  "bytecode": "H4sIAAAAAAAA/7VSWw4CIQzkoVG/Ze/R8ljKn1eRyN7/CMYICWH7t+wkZAhthpmCFH+oun64VJZij9bzqgzHgL2Wg9X7Em1Bh2+wKVMAH/JKSBgofCw5V8hTTDlFSOhdwS0kt1UxOc8XSCbzKeHV5AGozvhMXe5TSOZsrD0GXrq6njjLpm/O0Ycbk3Hp9mbIyb0DHETT05WvYg811FrvffAn5/vD0Ytm7mp4VjbdWZvnF3hgTpCVBAAA",
  "debug_symbols": "lY3LCgMhDEX/JWsXHehs/JVSBh9xCEiUqIUi/fc60oHZdpdzT3LTwaNt+0YcUgH96BCTM5USD+pwm1HJhg8q1UgFfV8VIHvQ6/JRECjiHJ8Kln/WB1ihGGnfrj9H/DJCxkb8YWjsLra+82nO+yzJoW+CR9N0o/4L",
  "file_map": {
    "51": {
      "source": "fn main(x: Field, y: pub Field) {\n    assert(x != y);\n}\n",
      "path": ""
    }
  },
  "names": [
    "main"
  ],
  "brillig_names": [
    "directive_invert"
  ]
}
